[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/multi_exit.gd" type="Script" id=1]
[ext_resource path="res://textures/simp/spark.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 16 )

[node name="multi_exit" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ex0" type="Sprite" parent="." index="0"]

scale = Vector2( 16, 16 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ex1" type="Sprite" parent="ex0" index="0"]

modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_multi_exit_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_multi_exit_body_exited"]


